<resources>
    <string name="app_name">FeynMind</string>
    <string name="register">Register</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masuk">Masuk</string>
    <string name="tampilkan_password">Tampilkan password</string>
    <string name="selamat_datang_di">Selamat Datang di</string>
    <string name="descLogin">Silakan masuk untuk menemukan pengalaman belajar yang baru</string>
    <string name="alamat_mail_harus_valid">Alamat email harus valid</string>
    <string name="kata_sandi_minimal_8_karakter">Kata sandi minimal terdiri dari 8 karakter</string>
    <string name="tampilkan_kata_sandi">Tampilkan kata sandi</string>
    <string name="masukkan_kata_sandi">Masukkan kata sandi</string>
    <string name="masukkan_email_kamu">Masukkan email kamu</string>
    <string name="isi_email">Harap isi email terlebih dahulu</string>
    <string name="isi_kata_sandi">Harap isi kata sandi terlebih dahulu</string>
    <string name="login_success">Masuk berhasil</string>
    <string name="descRegister">Daftar akunmu untuk menemukan pengalaman belajar yang baru</string>
    <string name="inputName">Masukkan nama kamu</string>
    <string name="sudah_punya_akun">Sudah memiliki akun?</string>
    <string name="isi_nama">Harap isi nama kamu terlebih dahulu</string>
    <string name="buat_akun_berhasil">Akun berhasil dibuat</string>
    <string name="buat_akun_gagal">Gagal membuat akun</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_feynmind">Feynmind</string>
    <string name="nav_beranda">Beranda</string>
    <string name="title_starter_1">Kamu Bingung?</string>
    <string name="title_starter_2">Mau Punya Temen Belajar?</string>
    <string name="title_starter_3">Ayo Bergabung</string>
    <string name="desc_starter_1">Mau belajar tapi bosen sama metode belajar yang itu-itu aja?</string>
    <string name="desc_starter_2">Nyari temen yang bisa bantu kamu belajar?</string>
    <string name="desc_starter_3">Mari jelajahi dunia baru bersama FeynMind</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="default_web_client_id">ID klien</string>
    <string name="scroll_view_description">Halaman Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>