<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.feynmind.ui.home.HomeFragment"
        android:label="@string/nav_beranda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_class"
        android:name="com.bangkit.feynmind.ui.chat.ClassFragment"
        android:label="@string/nav_feynmind"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.bangkit.feynmind.ui.profile.ProfileFragment"
        android:label="@string/nav_profil"
        tools:layout="@layout/fragment_profile" />
</navigation>